--- a/ColorPicker/en.lproj/MainMenu.xib
+++ b/ColorPicker/en.lproj/MainMenu.xib
@@ -1997,6 +1997,14 @@
 					</object>
 					<int key="connectionID">535</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">showPreferences:</string>
+						<reference key="source" ref="655724625"/>
+						<reference key="destination" ref="609285721"/>
+					</object>
+					<int key="connectionID">542</int>
+				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<object class="NSArray" key="orderedObjects">
@@ -3356,7 +3364,7 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">541</int>
+			<int key="maxID">542</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -3364,9 +3372,28 @@
 				<object class="IBPartialClassDescription">
 					<string key="className">AppController</string>
 					<string key="superclassName">NSObject</string>
+					<object class="NSMutableDictionary" key="actions">
+						<string key="NS.key.0">showPreferences:</string>
+						<string key="NS.object.0">id</string>
+					</object>
+					<object class="NSMutableDictionary" key="actionInfosByName">
+						<string key="NS.key.0">showPreferences:</string>
+						<object class="IBActionInfo" key="NS.object.0">
+							<string key="name">showPreferences:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</object>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/AppController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">ColorHistoryView</string>
+					<string key="superclassName">NSView</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/ColorHistoryView.h</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
@@ -3386,6 +3413,149 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/ColorPickerAppDelegate.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">ColorPickerPreview</string>
+					<string key="superclassName">NSView</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/ColorPickerPreview.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">ColorPickerViewController</string>
+					<string key="superclassName">NSViewController</string>
+					<object class="NSMutableDictionary" key="actions">
+						<string key="NS.key.0">hide:</string>
+						<string key="NS.object.0">id</string>
+					</object>
+					<object class="NSMutableDictionary" key="actionInfosByName">
+						<string key="NS.key.0">hide:</string>
+						<object class="IBActionInfo" key="NS.object.0">
+							<string key="name">hide:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</object>
+					<object class="NSMutableDictionary" key="outlets">
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>brightnessText</string>
+							<string>colorHistoryView1</string>
+							<string>colorHistoryView2</string>
+							<string>colorHistoryView3</string>
+							<string>colorHistoryView4</string>
+							<string>colorHistoryView5</string>
+							<string>colorPickerPreview</string>
+							<string>colorPreview</string>
+							<string>hexText</string>
+							<string>hueText</string>
+							<string>rgbText</string>
+							<string>saturationText</string>
+							<string>x</string>
+							<string>y</string>
+						</object>
+						<object class="NSMutableArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>NSTextField</string>
+							<string>ColorHistoryView</string>
+							<string>ColorHistoryView</string>
+							<string>ColorHistoryView</string>
+							<string>ColorHistoryView</string>
+							<string>ColorHistoryView</string>
+							<string>ColorPickerPreview</string>
+							<string>ColorHistoryView</string>
+							<string>NSTextField</string>
+							<string>NSTextField</string>
+							<string>NSTextField</string>
+							<string>NSTextField</string>
+							<string>NSTextField</string>
+							<string>NSTextField</string>
+						</object>
+					</object>
+					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>brightnessText</string>
+							<string>colorHistoryView1</string>
+							<string>colorHistoryView2</string>
+							<string>colorHistoryView3</string>
+							<string>colorHistoryView4</string>
+							<string>colorHistoryView5</string>
+							<string>colorPickerPreview</string>
+							<string>colorPreview</string>
+							<string>hexText</string>
+							<string>hueText</string>
+							<string>rgbText</string>
+							<string>saturationText</string>
+							<string>x</string>
+							<string>y</string>
+						</object>
+						<object class="NSMutableArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<object class="IBToOneOutletInfo">
+								<string key="name">brightnessText</string>
+								<string key="candidateClassName">NSTextField</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">colorHistoryView1</string>
+								<string key="candidateClassName">ColorHistoryView</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">colorHistoryView2</string>
+								<string key="candidateClassName">ColorHistoryView</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">colorHistoryView3</string>
+								<string key="candidateClassName">ColorHistoryView</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">colorHistoryView4</string>
+								<string key="candidateClassName">ColorHistoryView</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">colorHistoryView5</string>
+								<string key="candidateClassName">ColorHistoryView</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">colorPickerPreview</string>
+								<string key="candidateClassName">ColorPickerPreview</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">colorPreview</string>
+								<string key="candidateClassName">ColorHistoryView</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">hexText</string>
+								<string key="candidateClassName">NSTextField</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">hueText</string>
+								<string key="candidateClassName">NSTextField</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">rgbText</string>
+								<string key="candidateClassName">NSTextField</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">saturationText</string>
+								<string key="candidateClassName">NSTextField</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">x</string>
+								<string key="candidateClassName">NSTextField</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">y</string>
+								<string key="candidateClassName">NSTextField</string>
+							</object>
+						</object>
+					</object>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/ColorPickerViewController.h</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
